# ordmcu

./: .vimspector.json  CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake
core/: CMakeLists.txt
core/src/: stm32f1xx_hal_msp.c
core/stm32/f1xx/inc/: main.h  stm32f1xx_hal_conf.h
core/stm32/f1xx/src/: main.c
drv/: CMakeLists.txt
drv/stm32/f1xx/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c
if/: CMakeLists.txt
if/clk/: clk.h
if/clk/stm32/f1xx/: clk.c
if/com/: com.c  com.h  comp.h  err.h  typ.h
if/gpio/: gpio.h
if/gpio/stm32/f1xx/: gpio.c
if/intr/: intr.h
if/intr/stm32/f1xx/: intr.c
scr/gdb/: .gdbinit
scr/openocd/: jlink_swd_stm32f103_dump_flash.cfg  jlink_swd_stm32f103_erase_flash.cfg  jlink_swd_stm32f103_program.cfg
strtup/: CMakeLists.txt
